<resources>
    <string name="app_name">ZISProjekt</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">ZIS pokazivatelj lokacije</string>

    <string name="tab_text1">Karta</string>
    <string name="tab_text2">Postavke</string>

    <string name="shared_perf_key">ZISProjekt_perfs</string>
    <string name="id_key">ID_KEY</string>

    <string name="neuspjesno_citanje_baze">Neuspjesno citanje iz baze</string>
    <string name="uspjesno_brisanje_racuna">Vaš račun je izbrisan !:(</string>
    <string name="neuspjeno_brisanje_racuna">Neuspjesno brisanje racuna</string>
    <string name="zaboravljena_lozinka">Zaboravljena lozinka</string>

    <string name="settings_avatar_change_success">Slika uspjesno promijenjena</string>
    <string name="settings_avatar_change_failed">Neuspjesna promjena slike</string>
    <string name="settings_change_success">Postavke uspjesno promijenjene :)</string>
    <string name="settings_change_failed">Postavke neuspjesno promijenjene :(</string>
    <string name="settings_wrong_email">Neispravan email :(</string>
    <string name="settings_no_password">Molim upisite lozinku :(</string>

    <string name="signup_success">Uspjesno registrirano:</string>
    <string name="signup_failed">Neuspjesna registracija!</string>
    <string name="signup_db_failed">Neuspjesna registracija</string>
    <string name="signup_tooshort">Lozinka previše kratka</string>
    <string name="signup_no_pass">Lozinka nije upisana</string>
    <string name="signup_no_match">Lozinke se ne podudaraju</string>
    <string name="signup_no_email">Email nije upisan</string>
    <string name="signup_invalid_email">Neispravan email</string>

    <string name="login_anon_failed">Neuspješna anonimna prijava</string>
    <string name="login_anon_success">Dobrodosli tko god da jeste</string>
    <string name="login_success">Dobrodosli: </string>
    <string name="login_failed">Neuspjesna prijava!</string>
    <string name="login_already_logged">Vec ste prijavljeni!</string>
    <string name="login_db_fail">Neuspjesno dohvacanje podataka…</string>
    <string name="login_missing">Nesto fali!</string>

    <string name="checkSakrijLozinku_text">Sakrij lozinku</string>
    <string name="checkRememberMe_text">Zapamti me</string>

    <string name="editLogin_text">E-mail</string>
    <string name="editEmail_text">Email</string>
    <string name="editUsername_text">Korisničko ime</string>
    <string name="editPass_text">Lozinka</string>
    <string name="editConfirmPass_text">Potvrdi lozinku</string>

    <string name="txtNoviKorisnik_text">Novi korisnik? Registracija</string>
    <string name="txtAnonLogin_text">Prijava bez registracije</string>
    <string name="txtLogin_text">Prijava</string>
    <string name="txtSignup_text">Registracija</string>

    <string name="btnSignup_text">Registriraj se</string>
    <string name="btnSpremi_text">Spremi</string>
    <string name="btnLogin_text">Ulogiraj se</string>
    <string name="btnConvertAnon_text">Pretvori</string>
    <string name="btnLogout_text">Odjava</string>

    <string name="log_savedInDBSuccess">Sucessfuly saved in DB</string>
    <string name="log_savedInDBFail">Failed saving in DB</string>
    <string name="log_locationSavingSuccess">Successfuly saved location</string>
    <string name="log_locationSavingFail">Failed saving location</string>
    <string name="log_imageDLError">Image download error</string>

    <string name="toast_new_location">Nova trenutna lokacija</string>
    <string name="dist_unit">km</string>
    <string name="dist_title">Udaljenost</string>
</resources>
