<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:padding="20dp"
    android:background="@color/color_login_bgd">

    <LinearLayout
        android:id="@+id/layoutLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/txtSignup_text"
            android:textColor="@color/color_kinda_grey"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editSignupUsername"
            android:singleLine="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/editUsername_text"
            android:padding="10dp"
            android:textColor="@color/color_white"
            android:textColorHint="@color/color_white"
            android:textSize="16sp"   />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/color_kinda_grey" />

        <EditText
            android:id="@+id/editSignupEmail"
            android:singleLine="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/editEmail_text"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/color_white"
            android:textColorHint="@color/color_white"
            android:textSize="16sp" />
        <!-- android:drawableLeft="@drawable/icon_email" -->

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/color_kinda_grey" />

        <EditText
            android:id="@+id/editSignupPassword"
            android:singleLine="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/editPass_text"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/color_white"
            android:textColorHint="@color/color_white"
            android:textSize="16sp"   />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/color_kinda_grey" />

        <EditText
            android:id="@+id/editConfirmPassword"
            android:singleLine="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/editConfirmPass_text"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/color_white"
            android:textColorHint="@color/color_white"
            android:textSize="16sp"   />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/color_kinda_grey" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/btnSignup"
            android:text="@string/btnSignup_text"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/btnConvertAnon"
            android:text="@string/btnConvertAnon_text"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp"
            android:textStyle="bold"
            android:visibility="gone" />


    </LinearLayout>
</RelativeLayout>